interpreter/tests/test-modules/math.enzo
//= BINDING MATH OPERATIONS ────────────────────────────────────────────────
$math1: 100;            // prints 100
$math2: (3 + 2);          // returns function object
($math1 + $math2);            // prints 105

//= ARITHMETIC PRECEDENCE CHECK ─────────────────────────────────────────────
$precedence-check: (2 + 3 * 4);      // function object
$precedence-check;                 // prints 14

$precedence-check2: ((2 + 3) * 4);    // function object
$precedence-check2;                 // prints 20

//= PARENTHESIZED EXPRESSIONS AS STAND‐ALONE ─────────────────────────────
(10 + 5);                 // prints “15”

//= LARGE NUMBERS + NEGATIVE NUMBERS ────────────────────────────────────
$big: 1234567890;         // prints “1234567890”
$big;                     // prints “1234567890”
$neg: -5;                 // prints “-5”
$neg;                     // prints “-5”
($neg * 2);                 // prints “-10”
$negzero: -0;             // prints 0 (should not crash)
$negzero;                 // prints 0 (should not crash)
$weird: --5;              // error: double minus not allowed
